syntax = "proto2";

package cliente;

enum TipoNotificacao {
    CRIACAO = 1;
    LICITACAO = 2;
    FIM = 3;
}

enum TipoAcao {
    LEILAO = 1;
    EMISSAO = 2;
}

message Notificacao{
    required TipoNotificacao tipo = 1 [default = CRIACAO];
    required TipoAcao tipoMensagem = 2 [default = LEILAO];
    required string empresa = 3;
    required int64 montante = 4;
    optional float taxa = 5;
    optional int64 tempo = 6;
    optional ResultadoAcao resultado = 7;
}

message ResultadoAcao {
    required TipoAcao tipo = 1 [default = LEILAO];
    required bool sucesso = 2;
    required string texto = 3;
}