syntax = "proto2";

package cliente;


message Autenticacao{
    required string username = 1;
    required string password = 2;
}


message RespostaAutenticacao{
    required bool sucesso = 1;
    optional string papel = 2;
}

enum TipoMensagem {
    LEILAO = 1;
    EMISSAO = 2;
}

message MensagemEmpresa{
    required TipoMensagem tipo = 1 [default = LEILAO];
    optional CriacaoLeilao leilao = 2;
    optional EmissaoTaxaFixa emissao = 3;
    required string utilizador = 4;
}

message CriacaoLeilao{
    required int64 montante = 1;
    required float taxa = 2;
}

message EmissaoTaxaFixa{
    required int64 montante = 1;
}

message MensagemInvestidor{
    required TipoMensagem tipo = 1 [default = LEILAO];
    optional LicitacaoLeilao leilao = 2;
    optional SubscricaoTaxaFixa emissao = 3;
    required string utilizador = 4;
}

message LicitacaoLeilao{
    required string empresa = 1;
    required int64 montante = 2;
    required float taxa = 3;
}

message SubscricaoTaxaFixa{
    required string empresa = 1;
    required int64 montante = 2;
}

enum TipoResposta {
    RESULTADO = 1;
    NOTIFICACAO = 2;
}

message RespostaExchange{
    required TipoResposta tipo = 1 [default = RESULTADO];
    optional NotificacaoUltrapassado notificacao = 2;
    optional Resultado resultado = 3;
}

/* possivelmente vai ser necessario uma resposta tanto para a empresa
# como para o investidor a informar o resultado da sua operacao
*/
message NotificacaoUltrapassado{
    required TipoMensagem tipo = 1 [default = LEILAO];
    required string empresa = 2;
    required string utilizador = 3;
    optional float taxa = 4;
    required int64 valor = 5;
    optional string texto = 6;
}
/*
# Mensagem para o resultado tanto das licitacoes como leiloes
# na string pode vir logo todo o texto, pois nao sei se sera facil
# apresentar arrays e assim tambem mostra logo tudo
*/
message Resultado{
    required TipoMensagem tipo = 1 [default = LEILAO];
    required string empresa = 2;
    required string texto = 3;
}

